Fixing shimmer load padding problem on mobile

--- a/src/app/styles/responsive_styles.scss
+++ b/src/app/styles/responsive_styles.scss
@@ -36,6 +36,13 @@
   .chips-container .chip {
     margin-bottom: 7px;
   }
+
+  /**
+  * Anime small thumbnail list
+  */
+  .anime-small-thumbnail .info.shimmer-load {
+    margin-bottom: 5px;
+  }
 }
 
 /* Phanblets */
